--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
   "bin": {
     "jy-validator": "./bin/jy-validator.js"
   },
+  "funding": {
+    "type": "github",
+    "url": "https://github.com/sponsors/sandole"
+  },
   "scripts": {
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
     "prepublishOnly": "npm test"
